--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             </div>
             <div>
                 <button class="zero" onclick="number('0')">0</button>
+                <button class="zero"  onclick="delet()">delete</button>
             </div>
         </div>
     </div>
