--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="main">
         <div class="input">
-            <input type="text" class="input" id="input">
+            <input type="text" class="input" id="input" disabled>
         </div>
 
         <div class="num">
